text align fix and css and html cleanup

--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -123,6 +123,7 @@
 
     /* Sub header */
     .drop-down-menu__hdr-sub {
+      text-align: left;
       color: $color-grey-med-2;
       @include to-rem(padding-top padding-bottom, 1);
       @include to-rem(padding-left padding-right, $spacing-half);
